Configured environment and requirement files

--- a/requirements.in
+++ b/requirements.in
@@ -1,2 +1,8 @@
 # TODO - complete with requirements (pandas, sklearn etc...)
 # Then, execute "pip-compile requirements.in" to generate the file requirements.txt
+
+prefect
+scikit-learn
+pydantic
+pandas
+numpy
