--- a/environment.yml
+++ b/environment.yml
@@ -1,2 +1,14 @@
-# TODO (if using conda) - complete with environment name and dependencies
-# Refer to the course and follow the best practices for creating a conda environment
+name: abalone-mlops
+channels:
+  - conda-forge
+dependencies:
+  - python=3.10
+  - pip
+  - black
+  - isort
+  - flake8
+  - prefect
+  - pydantic
+  - scikit-learn
+  - pandas
+  - numpy
