--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,17 +5,26 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "xhec-mlops-project-student"
 authors = [
-  { name = "username", email = "user@email.com" },
-] # TODO: add authors here
+  { name = "hadrienstrichard", email = "hadrienstrichard@gmail.com" },
+  { name = "Hozidi", email = "hozidi@email.com" },
+  { name = "JokyHub", email = "eudes.agbre@email.com" },
+  { name = "tarekmassoud", email = "t.massoud@hotmail.com" },
+  { name = "cathal-brady", email = "cathalbrady@polytechnique.edu" }
+]
 description = "This repository contains the solution for the X-HEC MLOps Project on the industrialization of Abalone age prediction model."
 version = "0.0.1"
 readme = "README.md"
-requires-python = ">3.10" # TODO: update this version
+requires-python = ">3.10"
 
 [project.urls]
-"Homepage" = "https://github.com/artefactory/xhec-mlops-project-student" # TODO: update this URL
+"Homepage" = "https://github.com/cathal-brady/xhec-mlops-project-student.git"
 
 [tool.setuptools]
 packages = ["src"]
 
-# TODO: add black, isort, and ruff (optional - not needed if using flake8) configurations here
+[tool.black]
+line-length = 88
+target-version = ['py310']
+
+[tool.isort]
+profile = "black"
