--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,16 +6,50 @@ jobs:
   CI:
     name: Launching CI
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        python-version: ['3.10'] # TODO: update this version
+        python-version: ['3.10', '3.11']  # You can easily add more versions here
 
     steps:
-      - uses: actions/checkout@v2
+      # Step 1: Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Step 2: Set up Python environment with the selected version
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: # TODO create a step to install your project's dependencies
-      - name: # TODO create a step to test the quality of your code
+      # Step 3: Install dependencies (both production and development)
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.in
+          pip install -r requirements-dev.in
+
+      # Step 4: Run isort (check import order)
+      - name: Run isort
+        run: isort --check --diff .
+
+      # Step 5: Run black (check code formatting)
+      - name: Run black
+        run: black --check .
+
+      # Step 6: Run flake8 (check for linting issues)
+      - name: Run flake8
+        run: flake8 .
+
+      # Step 7: Run tests
+      - name: Run tests
+        run: pytest
+
+      # Step 8: Cache dependencies (optional, for speed)
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
