Updates requirement and env files. Add env to gitignore.

--- a/requirements.in
+++ b/requirements.in
@@ -1,8 +1,10 @@
-# TODO - complete with requirements (pandas, sklearn etc...)
-# Then, execute "pip-compile requirements.in" to generate the file requirements.txt
-
 prefect
-scikit-learn
+scikit-learn==1.2.2
 pydantic
-pandas
+pandas==1.5.3
 numpy
+mlflow==2.6.0
+xgboost==1.7.3
+matplotlib==3.7.1
+seaborn==0.12.2
+kagglehub==1.0.0
