--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,12 @@ dependencies:
   - flake8
   - prefect
   - pydantic
-  - scikit-learn
-  - pandas
   - numpy
+  - scikit-learn=1.2.2
+  - pandas=1.5.3
+  - matplotlib=3.7.1
+  - seaborn=0.12.2
+  - xgboost=1.7.3
+  - pip:
+      - mlflow==2.6.0
+      - kagglehub==1.0.0
