--- a/requirements.in
+++ b/requirements.in
@@ -1,10 +1,10 @@
 prefect
 scikit-learn==1.2.2
 pydantic
-pandas==1.5.3
-numpy
+pandas>=1.5.3,<2.0.0
+numpy>=1.23.0,<2.0.0
 mlflow==2.6.0
 xgboost==1.7.3
-matplotlib==3.7.1
-seaborn==0.12.2
-kagglehub==1.0.0
+matplotlib>=3.7.1,<4.0.0
+seaborn>=0.12.2,<1.0.0
+kagglehub==0.3.3
