Some minor fixes to  README for step 0 and deletion of unneeded files

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ['3.10', '3.11']  # You can easily add more versions here
+        python-version: ['3.10', '3.11']  
 
     steps:
       # Step 1: Checkout the code
