--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,10 +6,19 @@
 #
 black==24.10.0
     # via -r requirements-dev.in
+build==1.2.2.post1
+    # via pip-tools
 cfgv==3.4.0
     # via pre-commit
 click==8.1.7
-    # via black
+    # via
+    #   black
+    #   pip-tools
+colorama==0.4.6
+    # via
+    #   build
+    #   click
+    #   pytest
 distlib==0.3.9
     # via virtualenv
 filelock==3.16.1
@@ -31,9 +40,12 @@ nodeenv==1.9.1
 packaging==24.1
     # via
     #   black
+    #   build
     #   pytest
 pathspec==0.12.1
     # via black
+pip-tools==7.4.1
+    # via -r requirements-dev.in
 platformdirs==4.3.6
     # via
     #   black
@@ -46,9 +58,19 @@ pycodestyle==2.12.1
     # via flake8
 pyflakes==3.2.0
     # via flake8
+pyproject-hooks==1.2.0
+    # via
+    #   build
+    #   pip-tools
 pytest==8.3.3
     # via -r requirements-dev.in
 pyyaml==6.0.2
     # via pre-commit
 virtualenv==20.27.0
     # via pre-commit
+wheel==0.44.0
+    # via pip-tools
+
+# The following packages are considered to be unsafe in a requirements file:
+# pip
+# setuptools
