--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,6 @@ alembic==1.13.3
     # via
     #   mlflow
     #   prefect
-annotated-types==0.7.0
-    # via pydantic
 anyio==4.6.2.post1
     # via
     #   httpx
@@ -21,6 +19,8 @@ apprise==1.9.0
     # via prefect
 asgi-lifespan==2.1.0
     # via prefect
+asttokens==2.4.1
+    # via stack-data
 asyncpg==0.30.0
     # via prefect
 attrs==24.2.0
@@ -30,12 +30,13 @@ attrs==24.2.0
 blinker==1.8.2
     # via flask
 cachetools==5.5.0
-    # via prefect
+    # via google-auth
 certifi==2024.8.30
     # via
     #   apprise
     #   httpcore
     #   httpx
+    #   kubernetes
     #   requests
 cffi==1.17.1
     # via cryptography
@@ -55,7 +56,13 @@ cloudpickle==2.2.1
     #   mlflow
     #   prefect
 colorama==0.4.6
-    # via griffe
+    # via
+    #   click
+    #   griffe
+    #   ipython
+    #   tqdm
+comm==0.2.2
+    # via ipykernel
 contourpy==1.3.0
     # via matplotlib
 coolname==2.2.0
@@ -70,14 +77,20 @@ databricks-cli==0.18.0
     # via mlflow
 dateparser==1.2.0
     # via prefect
+debugpy==1.8.7
+    # via ipykernel
+decorator==5.1.1
+    # via ipython
 docker==6.1.3
     # via
     #   mlflow
     #   prefect
+durationpy==0.9
+    # via kubernetes
 entrypoints==0.4
     # via mlflow
-exceptiongroup==1.2.2
-    # via prefect
+executing==2.1.0
+    # via stack-data
 fastapi==0.115.3
     # via prefect
 flask==2.3.3
@@ -90,14 +103,12 @@ gitdb==4.0.11
     # via gitpython
 gitpython==3.1.43
     # via mlflow
-graphviz==0.20.3
-    # via prefect
+google-auth==2.35.0
+    # via kubernetes
 greenlet==3.1.1
     # via sqlalchemy
 griffe==1.5.1
     # via prefect
-gunicorn==21.2.0
-    # via mlflow
 h11==0.14.0
     # via
     #   httpcore
@@ -107,15 +118,9 @@ h2==4.1.0
 hpack==4.0.0
     # via h2
 httpcore==1.0.6
-    # via
-    #   httpx
-    #   prefect
+    # via httpx
 httpx[http2]==0.27.2
     # via prefect
-humanize==4.11.0
-    # via
-    #   jinja2-humanize-extension
-    #   prefect
 hyperframe==6.0.1
     # via h2
 idna==3.10
@@ -125,16 +130,19 @@ idna==3.10
     #   requests
 importlib-metadata==6.11.0
     # via mlflow
+ipykernel==6.29.5
+    # via -r requirements.in
+ipython==8.28.0
+    # via ipykernel
 itsdangerous==2.2.0
     # via flask
+jedi==0.19.1
+    # via ipython
 jinja2==3.1.4
     # via
     #   flask
-    #   jinja2-humanize-extension
     #   mlflow
     #   prefect
-jinja2-humanize-extension==0.4.0
-    # via prefect
 joblib==1.4.2
     # via scikit-learn
 jsonpatch==1.33
@@ -145,10 +153,18 @@ jsonschema==4.23.0
     # via prefect
 jsonschema-specifications==2024.10.1
     # via jsonschema
+jupyter-client==8.6.3
+    # via ipykernel
+jupyter-core==5.7.2
+    # via
+    #   ipykernel
+    #   jupyter-client
 kagglehub==0.3.3
     # via -r requirements.in
 kiwisolver==1.4.7
     # via matplotlib
+kubernetes==31.0.0
+    # via prefect
 mako==1.3.6
     # via alembic
 markdown==3.7
@@ -167,10 +183,16 @@ matplotlib==3.7.1
     #   -r requirements.in
     #   mlflow
     #   seaborn
+matplotlib-inline==0.1.7
+    # via
+    #   ipykernel
+    #   ipython
 mdurl==0.1.2
     # via markdown-it-py
 mlflow==2.6.0
     # via -r requirements.in
+nest-asyncio==1.6.0
+    # via ipykernel
 numpy==1.26.4
     # via
     #   -r requirements.in
@@ -186,13 +208,14 @@ numpy==1.26.4
 oauthlib==3.2.2
     # via
     #   databricks-cli
+    #   kubernetes
     #   requests-oauthlib
 orjson==3.10.10
     # via prefect
 packaging==23.2
     # via
     #   docker
-    #   gunicorn
+    #   ipykernel
     #   kagglehub
     #   matplotlib
     #   mlflow
@@ -202,39 +225,45 @@ pandas==1.5.3
     #   -r requirements.in
     #   mlflow
     #   seaborn
+parso==0.8.4
+    # via jedi
 pathspec==0.12.1
     # via prefect
 pendulum==3.0.0
     # via prefect
 pillow==11.0.0
     # via matplotlib
-prefect==3.0.10
+platformdirs==4.3.6
+    # via jupyter-core
+prefect==2.10.3
     # via -r requirements.in
-prometheus-client==0.21.0
-    # via prefect
+prompt-toolkit==3.0.48
+    # via ipython
 protobuf==4.25.5
     # via mlflow
+psutil==6.1.0
+    # via ipykernel
+pure-eval==0.2.3
+    # via stack-data
 pyarrow==12.0.1
     # via mlflow
+pyasn1==0.6.1
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.4.1
+    # via google-auth
 pycparser==2.22
     # via cffi
-pydantic==2.9.2
+pydantic==1.10.12
     # via
     #   -r requirements.in
     #   fastapi
     #   prefect
-    #   pydantic-extra-types
-    #   pydantic-settings
-pydantic-core==2.23.4
-    # via
-    #   prefect
-    #   pydantic
-pydantic-extra-types==2.9.0
-    # via prefect
-pydantic-settings==2.6.0
-    # via prefect
 pygments==2.18.0
-    # via rich
+    # via
+    #   ipython
+    #   rich
 pyjwt==2.9.0
     # via databricks-cli
 pyparsing==3.2.0
@@ -243,13 +272,12 @@ python-dateutil==2.9.0.post0
     # via
     #   croniter
     #   dateparser
+    #   jupyter-client
+    #   kubernetes
     #   matplotlib
     #   pandas
     #   pendulum
-    #   prefect
     #   time-machine
-python-dotenv==1.0.1
-    # via pydantic-settings
 python-slugify==8.0.4
     # via prefect
 pytz==2023.4
@@ -259,11 +287,20 @@ pytz==2023.4
     #   mlflow
     #   pandas
     #   prefect
+pywin32==308
+    # via
+    #   docker
+    #   jupyter-core
 pyyaml==6.0.2
     # via
     #   apprise
+    #   kubernetes
     #   mlflow
     #   prefect
+pyzmq==26.2.0
+    # via
+    #   ipykernel
+    #   jupyter-client
 querystring-parser==1.2.4
     # via mlflow
 readchar==4.2.0
@@ -280,12 +317,13 @@ requests==2.32.3
     #   databricks-cli
     #   docker
     #   kagglehub
+    #   kubernetes
     #   mlflow
     #   requests-oauthlib
 requests-oauthlib==2.0.0
-    # via apprise
-rfc3339-validator==0.1.4
-    # via prefect
+    # via
+    #   apprise
+    #   kubernetes
 rich==13.9.3
     # via
     #   prefect
@@ -294,10 +332,8 @@ rpds-py==0.20.0
     # via
     #   jsonschema
     #   referencing
-ruamel-yaml==0.18.6
-    # via prefect
-ruamel-yaml-clib==0.2.12
-    # via ruamel-yaml
+rsa==4.9
+    # via google-auth
 scikit-learn==1.2.2
     # via
     #   -r requirements.in
@@ -313,10 +349,11 @@ shellingham==1.5.4
     # via typer
 six==1.16.0
     # via
+    #   asttokens
     #   databricks-cli
+    #   kubernetes
     #   python-dateutil
     #   querystring-parser
-    #   rfc3339-validator
 smmap==5.0.1
     # via gitdb
 sniffio==1.3.1
@@ -324,14 +361,15 @@ sniffio==1.3.1
     #   anyio
     #   asgi-lifespan
     #   httpx
-    #   prefect
-sqlalchemy[asyncio]==2.0.36
+sqlalchemy[asyncio]==1.4.54
     # via
     #   alembic
     #   mlflow
     #   prefect
 sqlparse==0.5.1
     # via mlflow
+stack-data==0.6.3
+    # via ipython
 starlette==0.41.0
     # via fastapi
 tabulate==0.9.0
@@ -344,8 +382,20 @@ time-machine==2.16.0
     # via pendulum
 toml==0.10.2
     # via prefect
+tornado==6.4.1
+    # via
+    #   ipykernel
+    #   jupyter-client
 tqdm==4.66.5
     # via kagglehub
+traitlets==5.14.3
+    # via
+    #   comm
+    #   ipykernel
+    #   ipython
+    #   jupyter-client
+    #   jupyter-core
+    #   matplotlib-inline
 typer==0.12.5
     # via prefect
 typing-extensions==4.12.2
@@ -353,26 +403,32 @@ typing-extensions==4.12.2
     #   aiosqlite
     #   alembic
     #   fastapi
+    #   ipython
     #   prefect
     #   pydantic
-    #   pydantic-core
-    #   sqlalchemy
     #   typer
 tzdata==2024.2
-    # via pendulum
+    # via
+    #   pendulum
+    #   tzlocal
 tzlocal==5.2
     # via dateparser
-ujson==5.10.0
-    # via prefect
 urllib3==2.2.3
     # via
     #   databricks-cli
     #   docker
+    #   kubernetes
     #   requests
 uvicorn==0.32.0
     # via prefect
+waitress==2.1.2
+    # via mlflow
+wcwidth==0.2.13
+    # via prompt-toolkit
 websocket-client==1.8.0
-    # via docker
+    # via
+    #   docker
+    #   kubernetes
 websockets==13.1
     # via prefect
 werkzeug==3.0.4
