--- a/requirements.txt
+++ b/requirements.txt
@@ -421,8 +421,10 @@ urllib3==2.2.3
     #   docker
     #   kubernetes
     #   requests
-uvicorn==0.32.0
-    # via prefect
+uvicorn==0.23.2
+    # via
+    #   -r .\requirements.in
+    #   prefect
 waitress==2.1.2
     # via mlflow
 wcwidth==0.2.13
