--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,6 @@
 prefect==2.10.3
 scikit-learn==1.2.2
-pydantic==1.10.12
+pydantic==2.7.0
 ipykernel==6.29.5
 pandas>=1.5.3
 numpy>=1.23.0
@@ -11,3 +11,4 @@ seaborn>=0.12.2
 kagglehub==0.3.3
 joblib==1.2.0
 uvicorn==0.23.2
+fastapi==0.101.1
