--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
 
       # Step 5: Run black (check code formatting)
       - name: Run black
-        run: black --check . --max-line-length 88
+        run: black . --check --max-line-length 88
 
       # Step 6: Run flake8 (check for linting issues)
       - name: Run flake8
