--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
 
       # Step 5: Run black (check code formatting)
       - name: Run black
-        run: black --check .
+        run: black .
 
       # Step 6: Run flake8 (check for linting issues)
       - name: Run flake8
