--- a/requirements.txt
+++ b/requirements.txt
@@ -32,13 +32,12 @@ attrs==24.2.0
 blinker==1.8.2
     # via flask
 cachetools==5.5.0
-    # via google-auth
+    # via prefect
 certifi==2024.8.30
     # via
     #   apprise
     #   httpcore
     #   httpx
-    #   kubernetes
     #   requests
 cffi==1.17.1
     # via cryptography
@@ -87,13 +86,13 @@ docker==6.1.3
     # via
     #   mlflow
     #   prefect
-durationpy==0.9
-    # via kubernetes
 entrypoints==0.4
     # via mlflow
+exceptiongroup==1.2.2
+    # via prefect
 executing==2.1.0
     # via stack-data
-fastapi==0.101.1
+fastapi==0.115.3
     # via
     #   -r .\requirements.in
     #   prefect
@@ -107,12 +106,14 @@ gitdb==4.0.11
     # via gitpython
 gitpython==3.1.43
     # via mlflow
-google-auth==2.35.0
-    # via kubernetes
+graphviz==0.20.3
+    # via prefect
 greenlet==3.1.1
     # via sqlalchemy
 griffe==1.5.1
-    # via prefect
+    # via
+    #   -r .\requirements.in
+    #   prefect
 h11==0.14.0
     # via
     #   httpcore
@@ -122,9 +123,15 @@ h2==4.1.0
 hpack==4.0.0
     # via h2
 httpcore==1.0.6
-    # via httpx
+    # via
+    #   httpx
+    #   prefect
 httpx[http2]==0.27.2
     # via prefect
+humanize==4.11.0
+    # via
+    #   jinja2-humanize-extension
+    #   prefect
 hyperframe==6.0.1
     # via h2
 idna==3.10
@@ -145,8 +152,11 @@ jedi==0.19.1
 jinja2==3.1.4
     # via
     #   flask
+    #   jinja2-humanize-extension
     #   mlflow
     #   prefect
+jinja2-humanize-extension==0.4.0
+    # via prefect
 joblib==1.2.0
     # via
     #   -r .\requirements.in
@@ -169,8 +179,6 @@ kagglehub==0.3.3
     # via -r .\requirements.in
 kiwisolver==1.4.7
     # via matplotlib
-kubernetes==31.0.0
-    # via prefect
 mako==1.3.6
     # via alembic
 markdown==3.7
@@ -195,7 +203,7 @@ matplotlib-inline==0.1.7
     #   ipython
 mdurl==0.1.2
     # via markdown-it-py
-mlflow==2.6.0
+mlflow==2.5.0
     # via -r .\requirements.in
 nest-asyncio==1.6.0
     # via ipykernel
@@ -214,7 +222,6 @@ numpy==1.26.4
 oauthlib==3.2.2
     # via
     #   databricks-cli
-    #   kubernetes
     #   requests-oauthlib
 orjson==3.10.10
     # via prefect
@@ -241,8 +248,10 @@ pillow==11.0.0
     # via matplotlib
 platformdirs==4.3.6
     # via jupyter-core
-prefect==2.10.3
+prefect==3.0.10
     # via -r .\requirements.in
+prometheus-client==0.21.0
+    # via prefect
 prompt-toolkit==3.0.48
     # via ipython
 protobuf==4.25.5
@@ -253,21 +262,23 @@ pure-eval==0.2.3
     # via stack-data
 pyarrow==12.0.1
     # via mlflow
-pyasn1==0.6.1
-    # via
-    #   pyasn1-modules
-    #   rsa
-pyasn1-modules==0.4.1
-    # via google-auth
 pycparser==2.22
     # via cffi
-pydantic==2.7.0
+pydantic==2.9.2
     # via
     #   -r .\requirements.in
     #   fastapi
     #   prefect
-pydantic-core==2.18.1
-    # via pydantic
+    #   pydantic-extra-types
+    #   pydantic-settings
+pydantic-core==2.23.4
+    # via
+    #   prefect
+    #   pydantic
+pydantic-extra-types==2.9.0
+    # via prefect
+pydantic-settings==2.6.0
+    # via prefect
 pygments==2.18.0
     # via
     #   ipython
@@ -281,11 +292,13 @@ python-dateutil==2.9.0.post0
     #   croniter
     #   dateparser
     #   jupyter-client
-    #   kubernetes
     #   matplotlib
     #   pandas
     #   pendulum
+    #   prefect
     #   time-machine
+python-dotenv==1.0.1
+    # via pydantic-settings
 python-slugify==8.0.4
     # via prefect
 pytz==2023.4
@@ -302,7 +315,6 @@ pywin32==308
 pyyaml==6.0.2
     # via
     #   apprise
-    #   kubernetes
     #   mlflow
     #   prefect
 pyzmq==26.2.0
@@ -325,13 +337,12 @@ requests==2.32.3
     #   databricks-cli
     #   docker
     #   kagglehub
-    #   kubernetes
     #   mlflow
     #   requests-oauthlib
 requests-oauthlib==2.0.0
-    # via
-    #   apprise
-    #   kubernetes
+    # via apprise
+rfc3339-validator==0.1.4
+    # via prefect
 rich==13.9.3
     # via
     #   prefect
@@ -340,8 +351,10 @@ rpds-py==0.20.0
     # via
     #   jsonschema
     #   referencing
-rsa==4.9
-    # via google-auth
+ruamel-yaml==0.18.6
+    # via prefect
+ruamel-yaml-clib==0.2.12
+    # via ruamel-yaml
 scikit-learn==1.2.2
     # via
     #   -r .\requirements.in
@@ -359,9 +372,9 @@ six==1.16.0
     # via
     #   asttokens
     #   databricks-cli
-    #   kubernetes
     #   python-dateutil
     #   querystring-parser
+    #   rfc3339-validator
 smmap==5.0.1
     # via gitdb
 sniffio==1.3.1
@@ -369,8 +382,10 @@ sniffio==1.3.1
     #   anyio
     #   asgi-lifespan
     #   httpx
-sqlalchemy[asyncio]==1.4.54
+    #   prefect
+sqlalchemy[asyncio]==2.0.36
     # via
+    #   -r .\requirements.in
     #   alembic
     #   mlflow
     #   prefect
@@ -378,7 +393,7 @@ sqlparse==0.5.1
     # via mlflow
 stack-data==0.6.3
     # via ipython
-starlette==0.27.0
+starlette==0.41.0
     # via fastapi
 tabulate==0.9.0
     # via databricks-cli
@@ -415,6 +430,7 @@ typing-extensions==4.12.2
     #   prefect
     #   pydantic
     #   pydantic-core
+    #   sqlalchemy
     #   typer
 tzdata==2024.2
     # via
@@ -422,11 +438,12 @@ tzdata==2024.2
     #   tzlocal
 tzlocal==5.2
     # via dateparser
+ujson==5.10.0
+    # via prefect
 urllib3==2.2.3
     # via
     #   databricks-cli
     #   docker
-    #   kubernetes
     #   requests
 uvicorn==0.23.2
     # via
@@ -437,9 +454,7 @@ waitress==2.1.2
 wcwidth==0.2.13
     # via prompt-toolkit
 websocket-client==1.8.0
-    # via
-    #   docker
-    #   kubernetes
+    # via docker
 websockets==13.1
     # via prefect
 werkzeug==3.0.4
