--- a/environment.yml
+++ b/environment.yml
@@ -4,18 +4,27 @@ channels:
 dependencies:
   - python=3.11
   - pip
-  - black
-  - isort
-  - flake8
   - prefect
-  - pydantic
-  - numpy
+  - pydantic 
+  - numpy>=1.23.0
   - scikit-learn=1.2.2
   - pandas=1.5.3
   - matplotlib=3.7.1
   - seaborn=0.12.2
   - xgboost=1.7.3
+  - sqlalchemy=2.0.36  
+  - ipykernel=6.29.5 
+  - uvicorn=0.23.2 
+  - fastapi=0.115.3  
   - pip:
-      - mlflow==2.6.0
+      - mlflow==2.6.0  
       - kagglehub==0.3.3
-      - piptools
+      - griffe==1.5.1 
+      - joblib==1.2.0
+  - black
+  - isort
+  - flake8
+  - pytest
+  - pre-commit
+  - pip-tools
+
